--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   position: relative;
   overflow: hidden;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: "Times New Roman", serif;
